# fastapi-ecs-app

./: Dockerfile  README.md  pushtogithub.sh  pyproject.toml
app/: __init__.py  main.py
